# titan-gate-public

./: .gitignore  LICENSE  README.md  SPEC.md  pyproject.toml
examples/: TV1.json  TV2.json  TV3.json
titan/: verify.py
